# trinity_engine_v2

./: CMakeLists.txt  TODO_CHESS_GAME.txt
src/: CMakeLists.txt  main.cpp
src/board/: CMakeLists.txt  board.cpp  board_with_info.cpp  info.cpp  square.cpp
src/board/headers/: BoardBitboard.h  board.h  board_with_info.h  info.h  square.h
src/common/: CMakeLists.txt
src/common/headers/: bit_utilities.h  defs.h  direction.h  utils.h
src/game/: CMakeLists.txt  game.cpp  game_turn_observable.cpp  move_utils.cpp
src/game/headers/: Ioptions.h  game.h  game_turn.h  game_turn_observer.h  menu.h  move.h  move_utils.h  options.h
src/graphics/: CMakeLists.txt  ISectionComponent.cpp  Idisplay.cpp  board_drawing.cpp  game_drawings.cpp  game_drawings_state.cpp  pane.cpp  pieces_drawings.cpp  section.cpp  square_drawing.cpp  uicontroller.cpp  view.cpp  window.cpp
src/graphics/headers/: ISectionComponent.h  board_drawing.h  drawings.hpp  game_drawings.hpp  game_drawings_state.hpp  pane.h  pieces_drawings.hpp  section.h  square_drawing.h  uicontroller.h  view.h  window.h
src/ipc/: CMakeLists.txt  cu_pipe.cpp  ipc_pipe.cpp
src/ipc/headers/: ipc_pipe.h
src/piece/: CMakeLists.txt  bishop.cpp  king.cpp  knight.cpp  magic_bitboard.cpp  pawn.cpp  piece.cpp  pieces.cpp  queen.cpp  rook.cpp
src/piece/headers/: bishop.h  king.h  knight.h  magic_bitboard.h  pawn.h  piece.h  pieces.h  queen.h  rook.h  sliding_moves.hpp
src/player/: CMakeLists.txt  player.cpp  players.cpp
src/player/headers/: player.h  players.h
src/search/: CMakeLists.txt  main.cpp  uci.cpp
src/search/builtin_engine/: CMakeLists.txt
src/search/builtin_engine/general/: CMakeLists.txt
src/search/builtin_engine/logic/: AiPlayer.cpp  CMakeLists.txt  board.cpp  magic_bitboard.cpp
src/search/builtin_engine/pieces/: CMakeLists.txt  piece.cpp
src/search/headers/: uci.h
tests/: gtest.cpp  (+1 more)
(+17 files in other folders)
